remove return value for syncChannels